feat: add transition between welcome and settings pages

--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -51,8 +51,8 @@
         <div class="timer-box">
           <h2>Time game</h2>
           <div class="toggle-radio">
-            <input type="radio" name="rdo" id="yes" />
-            <input type="radio" name="rdo" id="no" checked />
+            <input type="radio" name="rdo" id="yes" checked />
+            <input type="radio" name="rdo" id="no" />
             <div class="switch">
               <label for="yes">Yes</label>
               <label for="no">No</label>
@@ -62,7 +62,7 @@
           <h2>Time to answer</h2>
           <div class="time-checkbox">
             <button class="left-btn">-</button>
-            <span>10</span>
+            <div id="valueTimer">10</div>
             <button class="right-btn">+</button>
           </div>
         </div>
