--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -35,7 +35,7 @@
         <p>2021©</p>
       </div>
     </div>
-    <div class="settings-block">
+    <div class="settings-block hidden">
       <div class="header-settings">
         <button class="left-arrow"></button>
         <h3>Settings</h3>
@@ -66,7 +66,7 @@
             <button class="right-btn">+</button>
           </div>
         </div>
-        <button class="save-button">Save</button>
+        <button id="saveSettings" class="save-button">Save</button>
       </div>
       <div class="footer">
         <div class="link-school">
@@ -83,6 +83,6 @@
         <p>2021©</p>
       </div>
     </div>
-    <script src="./src/index.js"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
