feat: add artist quiz with classes

--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -151,7 +151,7 @@
     </div>
     <div class="picture-question-block hidden">
       <div class="timer">
-        <div class="close"></div>
+        <div class="closeTwo close"></div>
         <div class="timeline">
           <div class="progress"></div>
         </div>
@@ -170,7 +170,16 @@
         </div>
       </div>
     </div>
-    <div class="check-answer"></div>
+    <div class="check-answer hidden">
+      <div class="picture-answer">
+        <div class="checker"></div>
+      </div>
+      <div class="information">
+        <p class="name">Name</p>
+        <p class="info">info</p>
+      </div>
+      <button class="next">Next</button>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
