--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -180,6 +180,12 @@
       </div>
       <button class="next">Next</button>
     </div>
+    <div class="end-round hidden">
+      <div class="cup"></div>
+      <p>Congratulations!</p>
+      <h4 class="score-result">0/10</h4>
+      <button class="category-back">Home</button>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
