feat: add desktop design and done questions for picture-quiz

--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -142,10 +142,10 @@
           Какую картину написал <span class="author">...</span> ?
         </div>
         <div class="variants-pictures">
-          <div class="var1">1</div>
-          <div class="var2">2</div>
-          <div class="var3">3</div>
-          <div class="var4">4</div>
+          <div class="var1"></div>
+          <div class="var2"></div>
+          <div class="var3"></div>
+          <div class="var4"></div>
         </div>
       </div>
     </div>
@@ -163,10 +163,10 @@
         <div class="question">Кто автор данной картины?</div>
         <div class="picture"></div>
         <div class="variants-authors">
-          <div class="v1">111111</div>
-          <div class="v2">222222</div>
-          <div class="v3">333333</div>
-          <div class="v4">444444</div>
+          <div class="v1"></div>
+          <div class="v2"></div>
+          <div class="v3"></div>
+          <div class="v4"></div>
         </div>
       </div>
     </div>
