--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -61,7 +61,7 @@
           </div>
           <h2>Time to answer</h2>
           <div class="time-checkbox">
-            <button class="left-btn">-</button>
+            <button class="left-btn">—</button>
             <div id="valueTimer">10</div>
             <button class="right-btn">+</button>
           </div>
@@ -96,6 +96,7 @@
               <div class="name-round">
                 <p id="roundId">Round 1</p>
               </div>
+              <div class="star"></div>
               <div class="score-round">
                 <p id="pId">0/10</p>
               </div>
@@ -185,6 +186,15 @@
       <p>Congratulations!</p>
       <h4 class="score-result">0/10</h4>
       <button class="category-back">Home</button>
+    </div>
+    <div class="round-result-block">
+      <div class="back-round">
+        <div class="arrow"></div>
+        <p>back</p>
+      </div>
+      <div class="template-inner">
+        <div id="previewTemplate" class="preview"></div>
+      </div>
     </div>
     <script src="./dist/main.js"></script>
   </body>
