--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
     </div>
-    <div class="pictures-quiz-block hidden">
+    <div class="picture-quiz-block hidden">
       <div class="header-category">
         <div class="color-logo"></div>
         <div class="go-home go-home_2"></div>
