--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
             <div class="news"></div>
         </main>
         <footer>
-            <p class="copyright">
-                Copyright <a href="https://newsapi.org">NewsAPI</a>
-            </p>
+            <p class="github"><a href="https://github.com/Anasstassia">Anasstassia 2021</a></p>
+            <div class="school"><a href="https://rs.school/"></a></div>
+            <p class="copyright">Copyright <a href="https://newsapi.org">NewsAPI</a></p>
         </footer>
 
         <template id="sourceItemTemp">
@@ -45,7 +45,6 @@
                 </div>
             </div>
         </template>
-
         <script src="./index.js"></script>
     </body>
 </html>
