--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
         </header>
         <main>
             <div class="sources buttons"></div>
-            <div class="news"></div>
+            <div class="news" id="onNews"></div>
         </main>
         <footer>
             <p class="github"><a href="https://github.com/Anasstassia">Anasstassia 2021</a></p>
-            <div class="school"><a href="https://rs.school/"></a></div>
+            <a class="link-school" href="https://rs.school/"></a>
             <p class="copyright">Copyright <a href="https://newsapi.org">NewsAPI</a></p>
         </footer>
 
