--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
             <h1>News Portal</h1>
         </header>
         <main>
-            <div class="sources buttons"></div>
+            <details>
+                <summary>Sources List</summary>
+                <div class="sources buttons"></div>
+            </details>
             <div class="news" id="onNews"></div>
         </main>
         <footer>
@@ -25,7 +28,6 @@
                 <span class="source__item-name"></span>
             </div>
         </template>
-
         <template id="newsItemTemp">
             <div class="news__item">
                 <div class="news__meta">
