feat: add header and footer

--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -5,8 +5,35 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./assets/favicon.ico" rel="shortcut icon" />
-        <link rel="stylesheet" href="./style.sass" />
         <title>Christmas Task</title>
     </head>
-    <body></body>
+    <body>
+        <div class="wrapper-main-page">
+            <header>
+                <button class="volume"></button>
+                <button class="snowfall"></button>
+                <form>
+                    <input type="search" class="search" placeholder="Поиск" autocomplete="off" />
+                </form>
+                <h3 class="title">Игрушки</h3>
+            </header>
+            <div class="main-block">
+                <div class="aside">
+                    <div class="sort">
+                        <h3 class="title-sort">Сортировать</h3>
+                    </div>
+                </div>
+                <div class="toys"></div>
+            </div>
+        </div>
+        <footer>
+            <form action="https://rs.school/" target="_blank">
+                <button class="rs-school"></button>
+            </form>
+            <form action="https://github.com/Anasstassia" target="_blank">
+                <h3>My Github</h3>
+            </form>
+            <!-- <a href="https://github.com/Anasstassia"> <p>My Github</p> </a> -->
+        </footer>
+    </body>
 </html>
