--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -18,11 +18,52 @@
                 <h3 class="title">Игрушки</h3>
             </header>
             <div class="main-block">
-                <div class="aside">
-                    <div class="sort">
-                        <h3 class="title-sort">Сортировать</h3>
+                <aside>
+                    <div class="aside">
+                        <div class="sort">
+                            <h3 class="title-sort">Сортировать</h3>
+                            <select class="select">
+                                <option>Выберите из списка</option>
+                                <option value="1">По названию от А до Я</option>
+                                <option value="2">По названию от Я до А</option>
+                                <option value="3">По году приобретения ↑</option>
+                                <option value="4">По году приобретения ↓</option>
+                            </select>
+                        </div>
+                        <h3 class="title-sort">Категории</h3>
+                        <p>Форма</p>
+                        <div class="shapes">
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                        </div>
+                        <p>Цвет</p>
+                        <div class="colors">
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                            <button></button>
+                        </div>
+                        <!-- <h3 class="title-sort">Фильтры</h3> -->
+                        <p>Количество экземпляров</p>
+                        <div id="count-slider"></div>
+                        <p>Год приобретения</p>
+                        <div id="year-slider"></div>
+                        <p>Размер</p>
+                        <div class="size">
+                            <input type="checkbox" id="big" /> <label for="big">Большой</label>
+                            <input type="checkbox" id="medium" /> <label for="medium">Средний</label>
+                            <input type="checkbox" id="small" /> <label for="small">Маленький</label>
+                        </div>
+                        <div class="fav">
+                            <input type="checkbox" id="fav" /> <label for="fav">Только любимые</label>
+                        </div>
+                        <button class="reset">Сбросить фильтры</button>
                     </div>
-                </div>
+                </aside>
                 <div class="toys"></div>
             </div>
         </div>
