feat: add copy-plugin for images

--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -83,7 +83,7 @@
                     <div class="template-toy">
                         <h2>Name</h2>
                         <div class="toy-img"></div>
-                        <img id="imgId" src="" alt="round" />
+                        <img id="imgId" src="/toys/1.png" alt="round" />
                     </div>
                     <div class="template-toy"></div>
                     <div class="template-toy"></div>
