feat: add description of a toy

--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -81,24 +81,35 @@
                 </aside>
                 <div class="toys">
                     <div class="template-toy">
-                        <h2>Name</h2>
-                        <div class="toy-img"></div>
-                        <img id="imgId" src="/toys/1.png" alt="round" />
+                        <h2>Большой шар с рисунком</h2>
+                        <img id="imgId" src="/toys/1.png" class="img-toy" alt="round" />
+                        <div class="description">
+                            <p>
+                                Количество:
+                                <span class="count">1</span>
+                            </p>
+                            <p>
+                                Год покупки:
+                                <span class="year">1960 год</span>
+                            </p>
+                            <p>
+                                Форма:
+                                <span class="shape">шар</span>
+                            </p>
+                            <p>
+                                Цвет:
+                                <span class="color">красный</span>
+                            </p>
+                            <p>
+                                Размер:
+                                <span class="color">большой</span>
+                            </p>
+                            <p>
+                                Любимая:
+                                <span class="favourite">да</span>
+                            </p>
+                        </div>
                     </div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
-                    <div class="template-toy"></div>
                 </div>
             </div>
         </div>
