feat: add slider values to html

--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -58,14 +58,14 @@
                         <p>Количество экземпляров</p>
                         <div id="count-slider"></div>
                         <div class="container">
-                            <span>1</span>
-                            <span>12</span>
+                            <span class="left-count">1</span>
+                            <span class="right-count">12</span>
                         </div>
                         <p class="title-slider">Год приобретения</p>
                         <div id="year-slider"></div>
                         <div class="container">
-                            <span>1940</span>
-                            <span>2021</span>
+                            <span class="left-year">1940</span>
+                            <span class="right-year">2021</span>
                         </div>
                         <p class="size-title">Размер</p>
                         <div class="size">
