feat: add the sign of the selected card

--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -82,6 +82,7 @@
                 <div class="toys">
                     <div class="template-toy">
                         <h2>Большой шар с рисунком</h2>
+                        <div class="heart"></div>
                         <img id="imgId" src="/toys/1.png" class="img-toy" alt="round" />
                         <div class="description">
                             <p>
