--- a/christmas-task/index.html
+++ b/christmas-task/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="fav-container">
                     <div class="fav-select">
-                        <span>10</span>
+                        <span>0</span>
                     </div>
                 </div>
             </header>
@@ -107,7 +107,7 @@
                             </p>
                             <p>
                                 Любимая:
-                                <span class="favourite">да</span>
+                                <span class="favorite">да</span>
                             </p>
                         </div>
                     </div>
