--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -79,39 +79,7 @@
                         <button class="reset">Сбросить фильтры</button>
                     </div>
                 </aside>
-                <div class="toys">
-                    <div class="template-toy">
-                        <h2>Большой шар с рисунком</h2>
-                        <div class="heart"></div>
-                        <img id="imgId" src="/toys/1.png" class="img-toy" alt="round" />
-                        <div class="description">
-                            <p>
-                                Количество:
-                                <span class="count">1</span>
-                            </p>
-                            <p>
-                                Год покупки:
-                                <span class="year">1960 год</span>
-                            </p>
-                            <p>
-                                Форма:
-                                <span class="shape">шар</span>
-                            </p>
-                            <p>
-                                Цвет:
-                                <span class="color">красный</span>
-                            </p>
-                            <p>
-                                Размер:
-                                <span class="color">большой</span>
-                            </p>
-                            <p>
-                                Любимая:
-                                <span class="favorite">да</span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <div class="toys"></div>
             </div>
         </div>
         <footer>
