--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -68,7 +68,7 @@
                             <span class="right-year">2020</span>
                         </div>
                         <p class="size-title">Размер</p>
-                        <div class="size">
+                        <div class="sizes">
                             <input type="checkbox" id="big" /> <label for="big">Большой</label>
                             <input type="checkbox" id="medium" /> <label for="medium">Средний</label>
                             <input type="checkbox" id="small" /> <label for="small">Маленький</label>
