feat: add popup about limit count fav. toys

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -18,6 +18,11 @@
                     </form>
                     <h3 class="title">Игрушки</h3>
                 </div>
+                <div class="warning">
+                    <button class="cross"></button>
+                    Извините, все слоты заполнены, <br />
+                    выберите не более 20 игрушек
+                </div>
                 <div class="fav-container">
                     <div class="fav-select">
                         <span>0</span>
@@ -86,10 +91,7 @@
             <form action="https://rs.school/" target="_blank">
                 <button class="rs-school"></button>
             </form>
-            <form action="https://github.com/Anasstassia" target="_blank">
-                <h3>My Github</h3>
-            </form>
-            <!-- <a href="https://github.com/Anasstassia"> <p>My Github</p> </a> -->
+            <a href="https://github.com/Anasstassia" target="_blank">My github</a>
         </footer>
     </body>
 </html>
