--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -14,7 +14,7 @@
                     <button class="volume"></button>
                     <button class="snowfall"></button>
                     <form>
-                        <input type="search" class="search" placeholder="Поиск" autocomplete="off" />
+                        <input type="search" class="search" placeholder="Поиск" autocomplete="off" autofocus />
                     </form>
                     <h3 class="title">Игрушки</h3>
                 </div>
