feat: add reset selected cards

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -82,6 +82,7 @@
                             <input type="checkbox" id="fav" /> <label for="fav">Только любимые</label>
                         </div>
                         <button class="reset">Сбросить фильтры</button>
+                        <button class="reset-ls">Очистить настройки</button>
                     </div>
                 </aside>
                 <div class="toys"></div>
