feat: add router

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -8,6 +8,7 @@
         <title>Christmas Task</title>
     </head>
     <body>
+        <div class="wrapper-welcome-page"></div>
         <div class="wrapper-main-page">
             <header>
                 <div class="header-container">
