feat: add page with tree

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -24,8 +24,7 @@
         <div class="wrapper-main-page hidden">
             <header>
                 <div class="header-container">
-                    <button class="volume"></button>
-                    <button class="snowfall"></button>
+                    <div class="switch-home">← На главную</div>
                     <form>
                         <input type="search" class="search" placeholder="Поиск" autocomplete="off" autofocus />
                     </form>
@@ -41,6 +40,7 @@
                         <span>0</span>
                     </div>
                 </div>
+                <div class="switch-to-tree">Нарядить ёлочку →</div>
             </header>
             <div class="main-block">
                 <aside>
@@ -99,6 +99,16 @@
                 </aside>
                 <div class="toys"></div>
             </div>
+        </div>
+        <div class="wrapper-tree-page">
+            <div class="left-side">
+                <div class="sound-snow-btn">
+                    <button class="volume"></button>
+                    <button class="snowfall"></button>
+                </div>
+            </div>
+            <div class="tree"></div>
+            <div class="right-side"></div>
         </div>
         <footer>
             <form action="https://rs.school/" target="_blank">
