feat: add settings to tree-page

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -103,12 +103,54 @@
         <div class="wrapper-tree-page">
             <div class="left-side">
                 <div class="sound-snow-btn">
+                    <div class="switch-home">← На главную</div>
                     <button class="volume"></button>
                     <button class="snowfall"></button>
                 </div>
+                <h3>Выберите Ёлку</h3>
+                <div class="trees">
+                    <div class="tree-select"></div>
+                    <div class="tree-select"></div>
+                    <div class="tree-select"></div>
+                    <div class="tree-select"></div>
+                </div>
+                <h3>Выберите фон</h3>
+                <div class="backgrounds">
+                    <div class="background"></div>
+                    <div class="background"></div>
+                    <div class="background"></div>
+                    <div class="background"></div>
+                    <div class="background"></div>
+                    <div class="background"></div>
+                    <div class="background"></div>
+                    <div class="background"></div>
+                </div>
+                <h3>Гирлянда</h3>
+                <div class="garlands">
+                    <button class="garland"></button>
+                    <button class="garland"></button>
+                    <button class="garland"></button>
+                    <button class="garland"></button>
+                    <button class="garland"></button>
+                </div>
             </div>
-            <div class="tree"></div>
-            <div class="right-side"></div>
+            <div class="tree">
+                <img src="./assets/tree/1.png" class="main-tree" alt="tree" />
+            </div>
+            <div class="right-side">
+                <div class="switch-to-toys">К выбору игрушек →</div>
+                <h3>Игрушки</h3>
+                <div class="select-toys-container">
+                    <div class="template-toy-sel"></div>
+                </div>
+                <h3>Вы нарядили</h3>
+                <div class="saved-trees">
+                    <div class="saved-tree"></div>
+                    <div class="saved-tree"></div>
+                    <div class="saved-tree"></div>
+                    <div class="saved-tree"></div>
+                </div>
+            </div>
         </div>
         <footer>
             <form action="https://rs.school/" target="_blank">
