--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -5,6 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./assets/favicon.ico" rel="shortcut icon" />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+            integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+            crossorigin="anonymous"
+        />
         <title>Christmas Task</title>
     </head>
     <body>
@@ -135,6 +141,9 @@
                 </div>
             </div>
             <div class="tree">
+                <div class="snowflakes">
+                    <i class="fas fa-snowflake"></i>
+                </div>
                 <img src="./assets/tree/1.png" class="main-tree" alt="tree" />
             </div>
             <div class="right-side">
