add selected toys to the tree-page

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -144,13 +144,16 @@
                 <div class="snowflakes">
                     <i class="fas fa-snowflake"></i>
                 </div>
-                <img src="./assets/tree/1.png" class="main-tree" alt="tree" />
+                <img src="./assets/tree/1.png" class="main-tree" data-drop-target="true" alt="tree" />
             </div>
             <div class="right-side">
                 <div class="switch-to-toys">К выбору игрушек →</div>
                 <h3>Игрушки</h3>
                 <div class="select-toys-container">
-                    <div class="template-toy-sel"></div>
+                    <div class="template-toy-sel" data-drop-target="true">
+                        <img class="toy-img" src="./assets/toys/1.png" alt="toy" />
+                        <div class="counter">10</div>
+                    </div>
                 </div>
                 <h3>Вы нарядили</h3>
                 <div class="saved-trees">
