feat: add girlands animation

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -144,6 +144,54 @@
                 <div class="snowflakes">
                     <i class="fas fa-snowflake"></i>
                 </div>
+                <div class="garlands-container">
+                    <ul class="lightrope">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <ul class="lightrope">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <ul class="lightrope">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <ul class="lightrope">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <ul class="lightrope">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <map name="image-map">
+                    <area
+                        coords="240,46,213,108,187,187,158,276,121,367,100,424,81,481,53,537,30,604,62,675,139,693,251,690,339,691,428,677,481,626,448,521,378,352,328,216,301,140,251,11"
+                        shape="poly"
+                    />
+                </map>
                 <img src="./assets/tree/1.png" class="main-tree" data-drop-target="true" alt="tree" />
             </div>
             <div class="right-side">
