feat: cnange template

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -198,9 +198,9 @@
                 <div class="switch-to-toys">К выбору игрушек →</div>
                 <h3>Игрушки</h3>
                 <div class="select-toys-container">
-                    <div class="template-toy-sel" data-drop-target="true">
-                        <img class="toy-img" src="./assets/toys/1.png" alt="toy" />
-                        <div class="counter">10</div>
+                    <div class="template-toy-sel" data-drop-target="true" id="template">
+                        <img class="toy-img" alt="toy" />
+                        <div class="counter"></div>
                     </div>
                 </div>
                 <h3>Вы нарядили</h3>
